ANTLR/LLVM/cParser.py
# Generated from ./ANTLR/LLVM/c.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class cParser ( Parser ):

    grammarFileName = "c.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "<INVALID>", "'if'", "'else'", 
                     "'for'", "'while'", "'switch'", "'case'", "'default'", 
                     "'break'", "'&'", "'++'", "'+'", "'--'", "'-'", "'*'", 
                     "'/'", "'%'", "';'", "'('", "')'", "'!'", "'&&'", "'||'", 
                     "'=='", "'>'", "'<'", "'!='", "'>='", "'<='", "'{'", 
                     "'}'", "','", "<INVALID>", "<INVALID>", "'='", "'const'", 
                     "'int'", "'float'", "'char'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "FLOAT", "IF", "ELSE", "FOR", 
                      "WHILE", "SWITCH", "CASE", "DEFAULT", "BREAK", "AMPERSAND", 
                      "PLUSPLUS", "PLUS", "MINMIN", "MIN", "MAAL", "DEEL", 
                      "MOD", "SEMICOLON", "LBRACKET", "RBRACKET", "NOT", 
                      "AND", "OR", "EQ", "GT", "LT", "NE", "GE", "LE", "LCURLYBRACE", 
                      "RCURLYBRACE", "COMMA", "INT", "CHAR", "EQUALS", "CONST", 
                      "INT_TYPE", "FLOAT_TYPE", "CHAR_TYPE", "IDENTIFIER", 
                      "COMMENT1", "COMMENT2", "WS" ]

    RULE_c = 0
    RULE_line = 1
    RULE_scope = 2
    RULE_ifelse = 3
    RULE_for_loop = 4
    RULE_while_loop = 5
    RULE_for_initial = 6
    RULE_condition = 7
    RULE_for_update = 8
    RULE_switchcase = 9
    RULE_method_call = 10
    RULE_args = 11
    RULE_definition = 12
    RULE_variable_identifier = 13
    RULE_assignment_line = 14
    RULE_assignment = 15
    RULE_assignment2 = 16
    RULE_var_type = 17
    RULE_increment = 18
    RULE_increment_var_first = 19
    RULE_increment_op_first = 20
    RULE_pointer_type = 21
    RULE_bool1 = 22
    RULE_bool2 = 23
    RULE_boolop = 24
    RULE_not_value = 25
    RULE_plus = 26
    RULE_vm = 27
    RULE_mod = 28
    RULE_neg_sol = 29
    RULE_vm_sol = 30
    RULE_value = 31
    RULE_rvalue = 32
    RULE_lvalue = 33
    RULE_dereference = 34
    RULE_address = 35
    RULE_operator = 36
    RULE_operator2 = 37
    RULE_unary_min = 38
    RULE_unary_plus = 39

    ruleNames =  [ "c", "line", "scope", "ifelse", "for_loop", "while_loop", 
                   "for_initial", "condition", "for_update", "switchcase", 
                   "method_call", "args", "definition", "variable_identifier", 
                   "assignment_line", "assignment", "assignment2", "var_type", 
                   "increment", "increment_var_first", "increment_op_first", 
                   "pointer_type", "bool1", "bool2", "boolop", "not_value", 
                   "plus", "vm", "mod", "neg_sol", "vm_sol", "value", "rvalue", 
                   "lvalue", "dereference", "address", "operator", "operator2", 
                   "unary_min", "unary_plus" ]

    EOF = Token.EOF
    T__0=1
    FLOAT=2
    IF=3
    ELSE=4
    FOR=5
    WHILE=6
    SWITCH=7
    CASE=8
    DEFAULT=9
    BREAK=10
    AMPERSAND=11
    PLUSPLUS=12
    PLUS=13
    MINMIN=14
    MIN=15
    MAAL=16
    DEEL=17
    MOD=18
    SEMICOLON=19
    LBRACKET=20
    RBRACKET=21
    NOT=22
    AND=23
    OR=24
    EQ=25
    GT=26
    LT=27
    NE=28
    GE=29
    LE=30
    LCURLYBRACE=31
    RCURLYBRACE=32
    COMMA=33
    INT=34
    CHAR=35
    EQUALS=36
    CONST=37
    INT_TYPE=38
    FLOAT_TYPE=39
    CHAR_TYPE=40
    IDENTIFIER=41
    COMMENT1=42
    COMMENT2=43
    WS=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cParser.LineContext)
            else:
                return self.getTypedRuleContext(cParser.LineContext,i)


        def getRuleIndex(self):
            return cParser.RULE_c

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterC" ):
                listener.enterC(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitC" ):
                listener.exitC(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitC" ):
                return visitor.visitC(self)
            else:
                return visitor.visitChildren(self)




    def c(self):

        localctx = cParser.CContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_c)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cParser.FLOAT) | (1 << cParser.IF) | (1 << cParser.FOR) | (1 << cParser.WHILE) | (1 << cParser.SWITCH) | (1 << cParser.AMPERSAND) | (1 << cParser.PLUSPLUS) | (1 << cParser.PLUS) | (1 << cParser.MINMIN) | (1 << cParser.MIN) | (1 << cParser.MAAL) | (1 << cParser.LBRACKET) | (1 << cParser.NOT) | (1 << cParser.LCURLYBRACE) | (1 << cParser.INT) | (1 << cParser.CHAR) | (1 << cParser.CONST) | (1 << cParser.INT_TYPE) | (1 << cParser.FLOAT_TYPE) | (1 << cParser.CHAR_TYPE) | (1 << cParser.IDENTIFIER))) != 0):
                self.state = 80
                self.line()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifelse(self):
            return self.getTypedRuleContext(cParser.IfelseContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(cParser.For_loopContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(cParser.While_loopContext,0)


        def scope(self):
            return self.getTypedRuleContext(cParser.ScopeContext,0)


        def switchcase(self):
            return self.getTypedRuleContext(cParser.SwitchcaseContext,0)


        def definition(self):
            return self.getTypedRuleContext(cParser.DefinitionContext,0)


        def SEMICOLON(self):
            return self.getToken(cParser.SEMICOLON, 0)

        def assignment_line(self):
            return self.getTypedRuleContext(cParser.Assignment_lineContext,0)


        def bool1(self):
            return self.getTypedRuleContext(cParser.Bool1Context,0)


        def getRuleIndex(self):
            return cParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = cParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 86
                self.definition()
                self.state = 87
                self.match(cParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.state = 89
                self.assignment_line()
                self.state = 90
                self.match(cParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.state = 92
                self.bool1()
                self.state = 93
                self.match(cParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.state = 95
                self.ifelse()
                pass

            elif la_ == 5:
                self.state = 96
                self.for_loop()
                pass

            elif la_ == 6:
                self.state = 97
                self.while_loop()
                pass

            elif la_ == 7:
                self.state = 98
                self.scope()
                pass

            elif la_ == 8:
                self.state = 99
                self.switchcase()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScopeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLYBRACE(self):
            return self.getToken(cParser.LCURLYBRACE, 0)

        def RCURLYBRACE(self):
            return self.getToken(cParser.RCURLYBRACE, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cParser.LineContext)
            else:
                return self.getTypedRuleContext(cParser.LineContext,i)


        def getRuleIndex(self):
            return cParser.RULE_scope

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScope" ):
                listener.enterScope(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScope" ):
                listener.exitScope(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScope" ):
                return visitor.visitScope(self)
            else:
                return visitor.visitChildren(self)




    def scope(self):

        localctx = cParser.ScopeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_scope)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(cParser.LCURLYBRACE)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cParser.FLOAT) | (1 << cParser.IF) | (1 << cParser.FOR) | (1 << cParser.WHILE) | (1 << cParser.SWITCH) | (1 << cParser.AMPERSAND) | (1 << cParser.PLUSPLUS) | (1 << cParser.PLUS) | (1 << cParser.MINMIN) | (1 << cParser.MIN) | (1 << cParser.MAAL) | (1 << cParser.LBRACKET) | (1 << cParser.NOT) | (1 << cParser.LCURLYBRACE) | (1 << cParser.INT) | (1 << cParser.CHAR) | (1 << cParser.CONST) | (1 << cParser.INT_TYPE) | (1 << cParser.FLOAT_TYPE) | (1 << cParser.CHAR_TYPE) | (1 << cParser.IDENTIFIER))) != 0):
                self.state = 103
                self.line()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 109
            self.match(cParser.RCURLYBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfelseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(cParser.IF, 0)

        def LBRACKET(self):
            return self.getToken(cParser.LBRACKET, 0)

        def condition(self):
            return self.getTypedRuleContext(cParser.ConditionContext,0)


        def RBRACKET(self):
            return self.getToken(cParser.RBRACKET, 0)

        def scope(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cParser.ScopeContext)
            else:
                return self.getTypedRuleContext(cParser.ScopeContext,i)


        def ifelse(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cParser.IfelseContext)
            else:
                return self.getTypedRuleContext(cParser.IfelseContext,i)


        def ELSE(self):
            return self.getToken(cParser.ELSE, 0)

        def bool1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cParser.Bool1Context)
            else:
                return self.getTypedRuleContext(cParser.Bool1Context,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(cParser.SEMICOLON)
            else:
                return self.getToken(cParser.SEMICOLON, i)

        def assignment_line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cParser.Assignment_lineContext)
            else:
                return self.getTypedRuleContext(cParser.Assignment_lineContext,i)


        def getRuleIndex(self):
            return cParser.RULE_ifelse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfelse" ):
                listener.enterIfelse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfelse" ):
                listener.exitIfelse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfelse" ):
                return visitor.visitIfelse(self)
            else:
                return visitor.visitChildren(self)




    def ifelse(self):

        localctx = cParser.IfelseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifelse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(cParser.IF)
            self.state = 112
            self.match(cParser.LBRACKET)
            self.state = 113
            self.condition()
            self.state = 114
            self.match(cParser.RBRACKET)
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 115
                self.scope()
                pass

            elif la_ == 2:
                self.state = 116
                self.bool1()
                self.state = 117
                self.match(cParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.state = 119
                self.assignment_line()
                self.state = 120
                self.match(cParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.state = 122
                self.ifelse()
                pass


            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 125
                self.match(cParser.ELSE)
                self.state = 134
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 126
                    self.scope()
                    pass

                elif la_ == 2:
                    self.state = 127
                    self.bool1()
                    self.state = 128
                    self.match(cParser.SEMICOLON)
                    pass

                elif la_ == 3:
                    self.state = 130
                    self.assignment_line()
                    self.state = 131
                    self.match(cParser.SEMICOLON)
                    pass

                elif la_ == 4:
                    self.state = 133
                    self.ifelse()
                    pass




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_loopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(cParser.FOR, 0)

        def LBRACKET(self):
            return self.getToken(cParser.LBRACKET, 0)

        def for_initial(self):
            return self.getTypedRuleContext(cParser.For_initialContext,0)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(cParser.SEMICOLON)
            else:
                return self.getToken(cParser.SEMICOLON, i)

        def condition(self):
            return self.getTypedRuleContext(cParser.ConditionContext,0)


        def for_update(self):
            return self.getTypedRuleContext(cParser.For_updateContext,0)


        def RBRACKET(self):
            return self.getToken(cParser.RBRACKET, 0)

        def scope(self):
            return self.getTypedRuleContext(cParser.ScopeContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(cParser.For_loopContext,0)


        def bool1(self):
            return self.getTypedRuleContext(cParser.Bool1Context,0)


        def assignment_line(self):
            return self.getTypedRuleContext(cParser.Assignment_lineContext,0)


        def getRuleIndex(self):
            return cParser.RULE_for_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_loop" ):
                listener.enterFor_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_loop" ):
                listener.exitFor_loop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_loop" ):
                return visitor.visitFor_loop(self)
            else:
                return visitor.visitChildren(self)




    def for_loop(self):

        localctx = cParser.For_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_for_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(cParser.FOR)
            self.state = 139
            self.match(cParser.LBRACKET)
            self.state = 140
            self.for_initial()
            self.state = 141
            self.match(cParser.SEMICOLON)
            self.state = 142
            self.condition()
            self.state = 143
            self.match(cParser.SEMICOLON)
            self.state = 144
            self.for_update()
            self.state = 145
            self.match(cParser.RBRACKET)
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 146
                self.scope()
                pass

            elif la_ == 2:
                self.state = 147
                self.bool1()
                self.state = 148
                self.match(cParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.state = 150
                self.assignment_line()
                self.state = 151
                self.match(cParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.state = 153
                self.for_loop()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_loopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(cParser.WHILE, 0)

        def LBRACKET(self):
            return self.getToken(cParser.LBRACKET, 0)

        def condition(self):
            return self.getTypedRuleContext(cParser.ConditionContext,0)


        def RBRACKET(self):
            return self.getToken(cParser.RBRACKET, 0)

        def scope(self):
            return self.getTypedRuleContext(cParser.ScopeContext,0)


        def getRuleIndex(self):
            return cParser.RULE_while_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_loop" ):
                listener.enterWhile_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_loop" ):
                listener.exitWhile_loop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_loop" ):
                return visitor.visitWhile_loop(self)
            else:
                return visitor.visitChildren(self)




    def while_loop(self):

        localctx = cParser.While_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_while_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(cParser.WHILE)
            self.state = 157
            self.match(cParser.LBRACKET)
            self.state = 158
            self.condition()
            self.state = 159
            self.match(cParser.RBRACKET)
            self.state = 160
            self.scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_initialContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self):
            return self.getTypedRuleContext(cParser.DefinitionContext,0)


        def getRuleIndex(self):
            return cParser.RULE_for_initial

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_initial" ):
                listener.enterFor_initial(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_initial" ):
                listener.exitFor_initial(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_initial" ):
                return visitor.visitFor_initial(self)
            else:
                return visitor.visitChildren(self)




    def for_initial(self):

        localctx = cParser.For_initialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_for_initial)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [cParser.CONST, cParser.INT_TYPE, cParser.FLOAT_TYPE, cParser.CHAR_TYPE]:
                self.state = 162
                self.definition()
                pass
            elif token in [cParser.SEMICOLON]:
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bool1(self):
            return self.getTypedRuleContext(cParser.Bool1Context,0)


        def assignment_line(self):
            return self.getTypedRuleContext(cParser.Assignment_lineContext,0)


        def getRuleIndex(self):
            return cParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = cParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 166
                self.bool1()
                pass

            elif la_ == 2:
                self.state = 167
                self.assignment_line()
                pass

            elif la_ == 3:
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_updateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bool1(self):
            return self.getTypedRuleContext(cParser.Bool1Context,0)


        def assignment_line(self):
            return self.getTypedRuleContext(cParser.Assignment_lineContext,0)


        def getRuleIndex(self):
            return cParser.RULE_for_update

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_update" ):
                listener.enterFor_update(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_update" ):
                listener.exitFor_update(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_update" ):
                return visitor.visitFor_update(self)
            else:
                return visitor.visitChildren(self)




    def for_update(self):

        localctx = cParser.For_updateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_for_update)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 171
                self.bool1()
                pass

            elif la_ == 2:
                self.state = 172
                self.assignment_line()
                pass

            elif la_ == 3:
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchcaseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SWITCH(self):
            return self.getToken(cParser.SWITCH, 0)

        def LBRACKET(self):
            return self.getToken(cParser.LBRACKET, 0)

        def value(self):
            return self.getTypedRuleContext(cParser.ValueContext,0)


        def RBRACKET(self):
            return self.getToken(cParser.RBRACKET, 0)

        def LCURLYBRACE(self):
            return self.getToken(cParser.LCURLYBRACE, 0)

        def DEFAULT(self):
            return self.getToken(cParser.DEFAULT, 0)

        def RCURLYBRACE(self):
            return self.getToken(cParser.RCURLYBRACE, 0)

        def CASE(self, i:int=None):
            if i is None:
                return self.getTokens(cParser.CASE)
            else:
                return self.getToken(cParser.CASE, i)

        def scope(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cParser.ScopeContext)
            else:
                return self.getTypedRuleContext(cParser.ScopeContext,i)


        def ifelse(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cParser.IfelseContext)
            else:
                return self.getTypedRuleContext(cParser.IfelseContext,i)


        def BREAK(self, i:int=None):
            if i is None:
                return self.getTokens(cParser.BREAK)
            else:
                return self.getToken(cParser.BREAK, i)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(cParser.SEMICOLON)
            else:
                return self.getToken(cParser.SEMICOLON, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(cParser.INT)
            else:
                return self.getToken(cParser.INT, i)

        def FLOAT(self, i:int=None):
            if i is None:
                return self.getTokens(cParser.FLOAT)
            else:
                return self.getToken(cParser.FLOAT, i)

        def CHAR(self, i:int=None):
            if i is None:
                return self.getTokens(cParser.CHAR)
            else:
                return self.getToken(cParser.CHAR, i)

        def bool1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cParser.Bool1Context)
            else:
                return self.getTypedRuleContext(cParser.Bool1Context,i)


        def assignment_line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cParser.Assignment_lineContext)
            else:
                return self.getTypedRuleContext(cParser.Assignment_lineContext,i)


        def getRuleIndex(self):
            return cParser.RULE_switchcase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchcase" ):
                listener.enterSwitchcase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchcase" ):
                listener.exitSwitchcase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwitchcase" ):
                return visitor.visitSwitchcase(self)
            else:
                return visitor.visitChildren(self)




    def switchcase(self):
